<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #c1f0f0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/lbcheckstatusHeader"
                android:text="@string/check_complaint_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/lbcheckdeptid"
                android:text="@string/dept_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/edtcheckID"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_toRightOf="@+id/lbcheckdeptid"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/lbStatus"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lbStatusVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/lbReply"
                android:text="@string/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20dp"

                />

            <TextView
                android:id="@+id/lbReplyVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/btnStatus"
                android:text="@string/checkstatus"
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:background="#ffff33"/>

        </LinearLayout>

    </ScrollView>
    
</RelativeLayout>